<resources>
    <string name="app_name">"Lab3Services"</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="alert_not_found_username">This Username not found</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_network">Error de conexion de red</string>
    <string name="error_name">Name is too short</string>
    <string name="error_age">Age is should be less than 100</string>


    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="save_register">Save Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="informacion_general">Informacion General</string>
    <string name="responsable">Responsable</string>
    <string name="descripcion">Descripcion</string>
    <string name="nombre_del_evento">Nombre del Evento</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="fecha_del_evento">Fecha del Evento</string>
    <string name="crear_carrera">Crear Carrera</string>
    <string name="age">Age</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="ubicaci_n_del_evento">Ubicación del Evento</string>
    <string name="guardar">Guardar</string>
    <string name="name">Name</string>
    <string name="error_invalid_username">username too short</string>

    <string-array name="tiemposTexto">
        <item>30 seg</item>
        <item>60 seg</item>
        <item>90 seg</item>
    </string-array>

    <string-array name="tiemposDato">
        <item>30000</item>
        <item>60000</item>
        <item>90000</item>
    </string-array>


</resources>
