<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr08_20171.Lab3.activities.MenuPrincipal">

    <ScrollView
        android:id="@+id/newEvent_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_new_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp">

            <ImageView
                android:id="@+id/photo_new_event"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg_radio_group"
                    android:layout_width="@dimen/none"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:checkedButton="@+id/rb_no_foto">

                    <RadioButton
                        android:id="@+id/rb_no_foto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No Foto" />

                    <RadioButton
                        android:id="@+id/rb_camara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Foto camara" />

                    <RadioButton
                        android:id="@+id/rb_galeria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Foto galeria" />
                </RadioGroup>

                <Button
                    android:id="@+id/btn_subir"
                    android:layout_width="@dimen/none"
                    android:layout_height="@dimen/regular_height"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin2"
                    android:layout_weight="2"
                    android:background="@color/colorAccent"
                    android:elevation="@dimen/elevation4"
                    android:text="subir"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/standar_size" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_name_event"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regular_height"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="@string/nombre_del_evento"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:singleLine="true"
                    android:textSize="@dimen/standar_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_description_event"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regular_height"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="Descripción del Evento"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:singleLine="true"
                    android:textSize="@dimen/standar_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_responsible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="@string/responsable"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/standar_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_score"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regular_height"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="@string/puntuaci_n"
                    android:imeOptions="actionNext"
                    android:inputType="number|textNoSuggestions"
                    android:singleLine="true"
                    android:textSize="@dimen/standar_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_fecha_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="@string/fecha_del_evento"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:textSize="@dimen/standar_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_ubication_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="@string/ubicaci_n_del_evento"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:textSize="@dimen/standar_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newevent_infogeneral"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/regular_height"
                    android:layout_marginTop="@dimen/margin2"
                    android:gravity="left"
                    android:hint="@string/informacion_general"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textNoSuggestions"
                    android:textSize="@dimen/standar_size" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin2"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/crear_evento"
                android:textColor="@android:color/white"
                android:textSize="@dimen/standar_size" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>